--- a/.eslintrc
+++ b/.eslintrc
@@ -27,7 +27,8 @@
       "warn",
       {
         "code": 80,
-        "tabWidth": 2
+        "tabWidth": 2,
+        "ignoreComments": true
       }
     ],
     // Already covered by TypeScript compiler
