--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,7 @@
       "./src/types"
     ],
     "outDir": "dist",
-    "baseUrl": "src",
+    "baseUrl": "src"
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "**/*.spec.ts"]
