--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
   ],
   "author": "Wing Chau",
   "license": "MIT",
-  "dependencies": {},
+  "dependencies": {
+    "ulid": "^2.3.0"
+  },
   "devDependencies": {
     "@types/jest": "^26.0.23",
     "@types/node": "^16.0.1",
