--- a/.eslintrc
+++ b/.eslintrc
@@ -13,6 +13,7 @@
   },
   "plugins": [
     "@typescript-eslint",
+    "eslint-plugin-tsdoc",
     "jest"
   ],
   "extends": [
@@ -44,6 +45,7 @@
     ],
     "import/prefer-default-export": "off",
     "no-use-before-define": "off",
+    "tsdoc/syntax": "warn",
     "@typescript-eslint/require-await": "off",
     "@typescript-eslint/no-use-before-define": "warn",
     "@typescript-eslint/no-unused-vars": [
