Org scope package

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tyodm",
+  "name": "@devtography/tyodm",
   "version": "0.1.0-rc.0",
   "description": "Fully typed ODM designed to work with various NoSQL database engines.",
   "main": "dist/index.js",
