Install `@aws-sdk/client-dynamodb`

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "author": "Wing Chau",
   "license": "MIT",
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.25.0",
     "ulid": "^2.3.0"
   },
   "devDependencies": {
