--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "rimraf dist && tsc",
-    "test": "jest --detectOpenHandles --coverage --verbose",
+    "test": "jest --detectOpenHandles --coverage --verbose --setupFiles dotenv/config",
     "watch-test": "npm run test -- --watchAll",
     "next-rc": "npm --no-git-tag-version version prerelease --preid=rc",
     "next-patch": "npm --no-git-tag-version version prepatch",
@@ -38,6 +38,7 @@
     "@types/node": "^16.0.1",
     "@typescript-eslint/eslint-plugin": "^4.26.1",
     "@typescript-eslint/parser": "^4.26.1",
+    "dotenv": "^10.0.0",
     "eslint": "^7.28.0",
     "eslint-config-airbnb-typescript": "^12.3.1",
     "eslint-plugin-import": "^2.23.4",
