--- a/.eslintrc
+++ b/.eslintrc
@@ -44,6 +44,7 @@
       }
     ],
     "import/prefer-default-export": "off",
+    "no-param-reassign": ["error", { "props": false }],
     "no-use-before-define": "off",
     "tsdoc/syntax": "warn",
     "@typescript-eslint/require-await": "off",
