--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,5 +20,5 @@
     "baseUrl": "src"
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "**/*.spec.ts"]
+  "exclude": ["node_modules", "**/*.spec.ts", "src/test-utils/**/*"]
 }
